# edge-vision-power-estimation

./: CONTRIBUTING.md  README.md
desktop/torch_onnx_trt/: Dockerfile  README.md  TensorRT.md  benchmark.py  pyproject.toml  trt_utils.py  viz_profiler.py
desktop/torch_onnx_trt/docs/: TensorRT.md
desktop/torch_onnx_trt/results/alexnet/: alexnet_onnx_20241029-190321.json  alexnet_onnx_20241029-191536.json  alexnet_tensorrt_20241023-190846.json  alexnet_tensorrt_20241029-190312.json  alexnet_tensorrt_20241029-191552.json
desktop/torch_onnx_trt/results/mobilenet_v2/: mobilenet_v2_onnx_20241023-204318.json  mobilenet_v2_onnx_20241029-190331.json  mobilenet_v2_onnx_20241029-191610.json  mobilenet_v2_tensorrt_20241023-205425.json  mobilenet_v2_tensorrt_20241029-190304.json  mobilenet_v2_tensorrt_20241029-191601.json
desktop/torch_onnx_trt/trt/: __init__.py  build_engine.py  runtime.py
desktop/torch_onnx_trtexec/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  benchmark.py  onnx_utils.py  pyproject.toml  trt_utils.py  utils.py
desktop/torch_onnx_trtexec/docs/: trtexec.md
desktop/torch_onnx_trtexec/notebooks/: README.md  alexnet_trtexec.ipynb
jetson/power_logging/: .dockerignore  .gitignore  Dockerfile.jetson  README.md  README_backup.md  data_version.py  hello.py  map_power_to_layers.py  measure_idling_power.py  measure_inference_power.py  measure_power.py  model.py  pyproject.toml  run_experiment.sh
jetson/power_logging/inference/: __init__.py  trt_utils.py
jetson/power_logging/model/: benchmark.py  lenet.py
jetson/power_logging/results_for_testing/: average_power_and_run_time.csv  average_power_used_by_layer.json  trt_engine_info.json  trt_layer_latency.json
model_training/: .gitignore  README.md  README_backup.md  convert_measurements.py  create_dataset.sh  data_version.py  dummy_data.ipynb  inference.py  map_power_to_layers.py  pyproject.toml  run.py  train.ipynb  train.py  training_pipeline.py
model_training/config/: config.yaml  convolutional_features.py  dense_features.py  pooling_features.py
model_training/data/: dummy_conv.csv  dummy_dense.csv  dummy_pooling.csv
model_training/data/mobilenet_v2/: convolutional.csv  pooling.csv
model_training/data_preparation/: __init__.py  convert.py  data_preprocess.py  io_utils.py  measurement_utils.py  tensorrt_utils.py
model_training/dataset/: dataset_builder.py
model_training/model/: common.py  convolutional_layer.py  dense_layer.py  model_builder.py  model_inference.py  model_tuning.py  pooling_layer.py
model_training/notebooks/: Convolution Layer - Model Tuning.ipynb  Data Exploration.ipynb  Dense Layer - Model Tuning.ipynb  Pooling Layer - Model Tuning.ipynb
model_training/pipeline/: trainer.py
model_training/sample_data/: resnet18_trt_engine_info.json  vgg16_trt_engine_info.json
model_training/tests/data_preparation/: data_preprocess_test.py  test_convert.py  test_data_preprocess.py  test_measurement_utils.py
model_training/tests/integration_tests/: test_create_dataset.py
(+267 files in other folders)
