[project]
name = "model-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagshub>=0.3.42",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "mlflow>=2.18.0",
    "numpy>=2.1.2",
    "optuna>=4.1.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pydantic>=2.9.2",
    "pytest>=8.3.4",
    "scikit-learn>=1.5.2",
    "tqdm>=4.67.0",
]
