[project]
name = "power-logging"
version = "0.1.0"
description = "Collect power usage data during inference cycles for ImageNet pretrained CNN models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Requires python version <= 3.11
    "torch==2.4.1",
    "torchvision==0.19.1",
    "tqdm>=4.66.5",
]
